--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,12 +25,14 @@ repos:
     hooks:
       - id: flake8
         args: ["--count", "--statistics"]
-  - repo: https://github.com/asottile/dead
-    rev: v1.3.0
-    hooks:
-      - id: dead
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.9.1
     hooks:
       - id: blacken-docs
         additional_dependencies: [ black==20.8b1 ]
+  - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+    rev: v3.0.0
+    hooks:
+      - id: commitlint
+        stages: [ commit-msg ]
+        additional_dependencies: [ "@commitlint/config-conventional" ]
