--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,23 +30,35 @@ drf-yasg = { version = "^1.17", optional = true }
 yasg = ["drf-yasg"]
 
 [tool.poetry.dev-dependencies]
-pytest = "^6"
+ipython = "^7.19.0"
+pre-commit = "^2.9.3"
 black = "^20.8b1"
 flake8 = "^3.8.4"
 mypy = "^0.790"
+pylint = "^2.7.2"
+pylint-django = "^2.4.2"
+pyproject-script = "^0.0.0-alpha.1"
+pytest = "^6"
 pytest-sugar = "^0.9.4"
 pytest-mock = "^3.4.0"
 pytest-responses = "^0.4.0"
 pytest-picked = "^0.4.4"
 pytest-instafail = "^0.4.2"
+pytest-django = "^4.1.0"
+pytest-cov = "^2.11.1"
 freezegun = "^1.0.0"
 factory-boy = "^3.1.0"
 codecov = "^2.1.11"
 coverage = {extras = ["toml"], version = "^5.3"}
-ipython = "^7.19.0"
-pre-commit = "^2.9.3"
 django-coverage-plugin = "^1.8.0"
-pytest-django = "^4.1.0"
+tox = "^3.23.0"
+bandit = "^1.7.0"
+Sphinx = "^3.5.3"
+sphinx-sitemap = "^2.2.0"
+sphinx-pyreverse = "^0.0.14"
+sphinx-autodoc-typehints = "^1.11.1"
+sphinx-autobuild = "^2021.3.14"
+recommonmark = "^0.7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -77,7 +89,7 @@ show_missing = true
 line-length = 79
 
 [tool.pytest.ini_options]
-addopts = "-s"
+addopts = "-s --cov=src/drft --no-cov-on-fail"
 python_files = [
     "test_*.py",
     "tests.py",
