--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,6 @@ max_line_length = 80
 # [*.md]
 # trim_trailing_whitespace = false
 #
-# [*.yml]
-# max_line_length = 500
+[{*.yml,*.yaml}]
+indent_size = 2
+max_line_length = 500
