--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,16 +10,27 @@ repos:
       - id: end-of-file-fixer
       - id: pretty-format-json
         args: ["--autofix"]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.790
+  - repo: local
     hooks:
-      - id: mypy
-        args: ["--config-file=./mypy.ini"]
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
+      - id: system
+        name: MyPy
+        entry: poetry run mypy
+        pass_filenames: false
+        language: system
+  - repo: local
     hooks:
-      - id: black
-        language_version: python3
+      - id: system
+        name: ISort
+        entry: poetry run isort .
+        pass_filenames: false
+        language: system
+  - repo: local
+    hooks:
+      - id: system
+        name: Black
+        entry: poetry run black .
+        pass_filenames: false
+        language: system
   - repo: https://gitlab.com/PyCQA/flake8
     rev: 3.8.4
     hooks:
