--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,10 @@
 [mypy]
-mypy_path=./stubs/
 python_version = 3.8
-ignore_missing_imports = True
 pretty = True
+show_absolute_path = True
+show_column_numbers = True
+show_error_codes = True
 files = src/drft, tests
+
+mypy_path=./stubs/
+ignore_missing_imports = True
