--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       #              run test suite
       #----------------------------------------------
       - name: Run Tests
-        run: poetry run pytest && codecov
+        run: poetry run pytest && poetry run codecov
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   lint:
@@ -85,9 +85,11 @@ jobs:
       - name: Black
         run: poetry run black . --check
       - name: mypy
-        run: poetry run mypy ./src
+        run: poetry run mypy
       - name: flake 8
         run: poetry run flake8 . --count --statistics
+      - name: isort
+        run: poetry run isort . --check
 
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
