refactor: adds markers (#2)

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,4 +7,16 @@ show_error_codes = True
 files = src/drft, tests
 
 mypy_path=./stubs/
+
+; The following packages are not typed
+[mypy-django.*]
+ignore_missing_imports = True
+
+[mypy-rest_framework.*]
+ignore_missing_imports = True
+
+[mypy-django_filters.*]
+ignore_missing_imports = True
+
+[mypy-drf_yasg.*]
 ignore_missing_imports = True
