--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+default_stages:
+  - commit
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
@@ -10,6 +12,11 @@ repos:
       - id: end-of-file-fixer
       - id: pretty-format-json
         args: ["--autofix"]
+      - id: mixed-line-ending
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.11.0
+    hooks:
+      - id: pyupgrade
   - repo: local
     hooks:
       - id: system
